# personal_algorithm_collection

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bin_digital/: CMakeLists.txt  bin_digital.cpp
consecutive-characters/: CMakeLists.txt
personal_algorithm_collection/bin_digital/: README.md
personal_algorithm_collection/coloring_a_border/: CMakeLists.txt  README.md
personal_algorithm_collection/compute_with_python/: CMakeLists.txt  main.c
personal_algorithm_collection/consecutive_characters/: CMakeLists.txt  README.md  consecutive_characters.cpp
personal_algorithm_collection/random-flip-matrix/: README.md  random-flip-matrix.cpp
personal_algorithm_collection/random_flip_matrix/: CMakeLists.txt
personal_algorithm_collection/relative_ranks/: CMakeLists.txt  README.md  relative_ranks.cpp
personal_algorithm_collection/remove-duplicates-from-sorted-array/: README.md
personal_algorithm_collection/remove_duplicates_from_sorted_array/: CMakeLists.txt
personal_algorithm_collection/search_range/: search_range.cpp
personal_algorithm_collection/single_number/: CMakeLists.txt  README.md
random-flip-matrix/: CMakeLists.txt  random-flip-matrix.cpp
remove-duplicates-from-sorted-array/: CMakeLists.txt  remove-duplicates-from-sorted-array.cpp
search_range/: CMakeLists.txt  README.md  search_range.cpp
single-number/: CMakeLists.txt  single-number.cpp
