cmake_minimum_required(VERSION 3.20)
project(personal_algorithm_collection)

set(CMAKE_CXX_STANDARD 20)


add_subdirectory(personal_algorithm_collection/bin_digital)
add_subdirectory(personal_algorithm_collection/search_range)
add_subdirectory(personal_algorithm_collection/single-number)
add_subdirectory(personal_algorithm_collection/random-flip-matrix)
add_subdirectory(personal_algorithm_collection/remove-duplicates-from-sorted-array)
