cmake_minimum_required(VERSION 3.20)
project(personal_algorithm_collection CXX)

set(CMAKE_CXX_STANDARD 20)


add_subdirectory(personal_algorithm_collection/bin_digital)
add_subdirectory(personal_algorithm_collection/search_range)
add_subdirectory(personal_algorithm_collection/single_number)
add_subdirectory(personal_algorithm_collection/random_flip_matrix)
add_subdirectory(personal_algorithm_collection/remove_duplicates_from_sorted_array)
add_subdirectory(personal_algorithm_collection/consecutive_characters)
add_subdirectory(personal_algorithm_collection/relative_ranks)
add_subdirectory(personal_algorithm_collection/coloring_a_border)

add_subdirectory(personal_algorithm_collection/compute_with_python)